client/src/components/FullImage/style.css
@keyframes loadImage {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes throwImage {
    from {
        transform: translateY(-100%);
        opacity: 0;
    }

    to {
        transform: none;
        opacity: 1;
    }
}

#full-image-box {
    position: fixed;
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(0, 0, 0, 0.75);
    z-index: 10;
    animation-name: loadImage;
    animation-duration: .25s;
}

#full-image-figure {
    position: relative;
    max-width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
    max-height: 100%;
    overflow-y: hidden;
    text-align:center;
    background-repeat: no-repeat;
    background-position: center;
    /* background-image: url("/images/icons/loading.gif"); */
}

#full-image {
    /* position: absolute;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%; */
    z-index:11;
    /* margin: 0 auto; */
    animation-name: throwImage;
    animation-duration: .75s;
    max-width: 100%;
    max-height: 100%;
}

#description {
    width: 100%;
    padding: 15px;
    position: absolute;
    bottom: 0;
    text-shadow: 0 5px 5px black;
    background:rgba(0, 0, 0, 0.75);

    z-index:15;
}

#close-desc {
    cursor: pointer;
    position: absolute;
    top: 5px;
    right: 5px;
    z-index:15;
    border-radius: 50%;
    background: var(--main-bk-color);
    color: white;
    font-family:'Courier New', Courier, monospace;
    font-size: 18px;
    border: rgba(255, 255, 255, 0.562) solid 2px;
}

